@@ -1,6 +1,6 @@
 Package: nacopula
-Version: 0.8-0
-Date: 2012-02-06
+Version: 0.8-1
+Date: 2012-..-..
 LastChanged: $LastChangedRevision$; $LastChangedDate$
 Title: Nested Archimedean Copulas
 Description: An R package for working with nested Archimedean copulas.
@@ -13,7 +13,7 @@ Author: Marius Hofert <marius.hofert@math.ethz.ch> and Martin Maechler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Depends: R (>= 2.12.0), methods, stats4
 Imports: gsl, ADGofTest, stabledist
-Suggests: lattice, MASS, sfsmisc, Rmpfr, bbmle
+Suggests: lattice, MASS, sfsmisc, Rmpfr, bbmle, Matrix
 License: GPL (>= 2)
 URL: http://nacopula.r-forge.r-project.org/
 LazyData: yes
